fixed responsive sizing issues, font & about-text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
   <div class="container">
     <section class="front">
-      <h1 class="title">Hello There</h1>
+      <div class="title-block">
+        <h1 class="title">Nima Seyf</h1>
+        <h2 class="subtitle">Front End Developer</h2>
+      </div>
     </section>
     <section class="bio">
       <h2 class="page-heading">About Me</h2>
@@ -51,7 +54,13 @@
     <section class="work">
       <h2 class="page-heading">Projects</h2>
       <!-- Projects are Hitman Randomizer, News feed, bjj scoreboard, haiku generator, text-shadow-assist -->
-
+      <div class="work-container">
+        <div class="work-item work-item1">Hitman Randomizer</div>
+        <div class="work-item work-item2">News Feed</div>
+        <div class="work-item work-item3">BJJ Scoreboard</div>
+        <div class="work-item work-item4">Haiku Generator</div>
+        <div class="work-item work-item5">Text Shadow Assist</div>
+      </div>
 
     </section>
     <section class="contact">
